--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -36,11 +36,16 @@
                     {% if user.is_authenticated %}
                     <a class="nav-item nav-link" id="home" href="/">Home</a>
                     <a class="nav-item nav-link" id="colorBlind" href="/colorBlindPage">ColorBlindPage</a>
-                    <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
+                    <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>                  
                     {% else %}
                     <a class="nav-item nav-link" id="login" href="/login">Login</a>
                     <a class="nav-item nav-link" id="sign-up" href="/sign-up">Sign-Up</a>
                     {% endif %}
+                </div>
+                {% if user.is_authenticated %}
+                <div class="navbar-nav ml-auto">
+                <span class="navbar-text">{{ user.firstName }} {{ user.lastName }}</span>
+                {% endif %}
                 </div>
             </div>
         </nav>
