Grammatical fixes and button alignment

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -4,9 +4,10 @@
     <br />
     <body style="background-color: #beffca;">
     <h1 align="center", style="color: #ffa8a8; font-family: 'Times New Roman', Times, serif; font-size:300%;">Colorblindness Informational Guide</h1>
+    <h3 align="center", style="color: #000000d0; font-family: 'Times New Roman', Times, serif; font-size:200%;">(In Color)</h3>
     
     <div align = "center", style="font-family: 'Times New Roman', Times, serif;">
-    <label style = "margin-top: 1em; color: rgb(38, 46, 46);", for="buttonPS">if you are color blind, click this button for easier reading!</label>
+    <label style = "margin-top: 1em; color: rgb(38, 46, 46);", for="buttonPS">If you are color blind, click this button for easier reading!</label>
     <br />
     <button align="center" class="bn29", style ="margin-top: .1em", id="buttonPS", type="button", onclick="window.location.href = '/colorBlindPage';">Palette Swapper!</button>
     </div>
