colorblindness information rewrite

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -14,50 +14,101 @@
 
     <link rel="stylesheet" href="/static/style.css">
 
-    
-        <p style="margin-top: 2em;">Black and white color blindness, also known as complete achromatopsia,
-        is a rare and unique condition that affects the way individuals perceive 
-        color. In this guide, we will explore what black and white color blindness is,
-        its causes, its impact on daily life, and strategies for supporting individuals
-        with this condition.</p>
+        <br />
         <t>
-            What is Black and White Color Blindness?
+            Understanding the Different Types of Colorblindness
         </t>
-        <p>Black and white color blindness, or achromatopsia, is a rare form of 
-            color vision deficiency where individuals have difficulty perceiving 
-            any colors. Instead, they see the world in shades of gray. This condition
-             is typically congenital and is present from birth.</p>
+        <p>Colorblindness is a condition in which individuals perceive color differently than the 
+            majority of the world, often lacking the ability to see certain colors, or even all 
+            colors around them. It is a very unique and rare condition and can impact people’s 
+            daily lives</p>
         <t>
-            Causes of Achromatopsia
+            What are the Different Kinds of Colorblindness?
         </t>
-        <p>Achromatopsia is primarily caused by genetic mutations that
-             affect the cone cells in the retina of the eye. Cone cells
-              are responsible for color vision, and in individuals with 
-              achromatopsia, these cones are either nonfunctional or severely
-               impaired. The genetic basis of achromatopsia can vary, and it 
-               can be inherited in an autosomal recessive manner, meaning that
-                both parents must carry a mutated gene for their child to have
-                 the condition.</p>
+        <p>
+            <strong>Black and white colorblindness (achromatopsia):</strong> 
+            Sees the world in shades of gray and is usually a condition which 
+            is congenital and is present from birth. 
+            <br />
+            <strong>Green Color Blindness (Deuteranopia):</strong> 
+            Do not have or have impaired green cone cells in their eyes which 
+            results in difficulty distinguishing between shades of green 
+            and red. 
+            <br />
+            <strong>Red Color Blindness (Protanopia):</strong> 
+            The absence or malfunctioning of red cone cells causes the struggle 
+            to differentiate between red and green colors as they are seen 
+            as the same color.
+        </p>
+        <t>
+            Causes of the Different Types of Colorblindness
+        </t>
+        <p>
+            <strong>Black and white colorblindness (achromatopsia):</strong> 
+            This type of colorblindness is usually caused by cone cells in the 
+            retina being genetically mutated and since these
+            cone cells are responsible for how color is perceived, 
+            it affects the person’s color vision. Furthermore, often cones are 
+            extremely impaired or even nonfunctional as well as can be often 
+            inherited only when both parents carry the mutated gene. 
+            <br />
+            <strong>Green Color Blindness (Deuteranopia):</strong> 
+            The type of colorblindness is affected by the genetic mutation of 
+            the X chromosome and thus is why mostly men are affected by green-red 
+            colorblindness since they only carry one X chromosome. 
+            Women are able to compensate for the mutation of one of their X 
+            chromosomes with the other.
+            <br />
+            <strong>Red Color Blindness (Protanopia):</strong> 
+            The type of colorblindness is affected by the genetic mutation of the 
+            X chromosome and thus is why mostly men are affected by green-red 
+            colorblindness since they only carry one X chromosome. Women are able 
+            to compensate for the mutation of one of their X chromosomes with the other.
+        </p>
         <t>
             Impact on Daily Life
         </t>
-        <p>1. Limited Color Perception: People with black and white color 
-            blindness perceive the world in grayscale, which means they
-             cannot distinguish between different colors. All colors appear
-             as shades of gray, varying in brightness and intensity.</p>
-        <p>2. Use Assistive Technology: There are specialized apps and devices that can help individuals with achromatopsia identify colors. These tools can assist with tasks like differentiating clothing colors or reading color-coded information.</p>
-        <p>3. Reduced Visual Acuity: Some individuals with achromatopsia may experience reduced visual acuity, which can impact their ability to see fine details and read small text.</p>
-        <p>4. Difficulty with Color-Dependent Tasks: Tasks that rely on color discrimination, such as identifying ripe fruits, traffic lights, or color-coded maps, can be challenging for those with black and white color blindness.</p>
+        <p>
+            <strong>Black and white colorblindness:</strong> 
+            This type of colorblindness can often cause individuals to become 
+            extremely sensitive to light and can often lead to painful situations 
+            if they are in bright environments. Furthermore, some people might 
+            even have a hard time differentiating between small details as they 
+            have reduced visual acuity. This will make it hard for them to see 
+            fine details or even read small text. Lastly, the most obvious impact 
+            on the lives of Black and White colorblind people is when they have to 
+            perform tasks based on color discrimination. For example, if at work 
+            their boss tells them to bring the “blue” folder, they might have a 
+            hard time performing the simple task. 
+            <br />
+            <strong>Green and Red Colorblindnes:</strong> 
+            One of the main impacts of green and red 
+            colorblindness is driving as it is hard to differentiate between the traffic lights go 
+            and stop and can lead to dangerous situations. Furthermore, many professional 
+            settings have the default red-green combination for tasks such as graphic 
+            designing, electrical work, medical care, etc. which can lead to very difficult time for
+            individuals with these conditions to go into these types of professions. Overall, since
+            society uses red and green a lot for indicators, whether it be in sports, work 
+            situations, games, etc. life overall is made a bit more difficult and stressful.
+        </p>
         <t>
             Coping Strategies and Support
         </t>
-        <p>1. Wear Appropriate Eyewear: Individuals with achromatopsia often wear tinted or polarized lenses to reduce light sensitivity and enhance their vision. These glasses can help in various lighting conditions.</p>
-        <p>2. Use Assistive Technology: There are specialized apps and devices that can help individuals with achromatopsia identify colors. These tools can assist with tasks like differentiating clothing colors or reading color-coded information.</p>
-        <p>3. Education and Awareness: It's important to educate friends, family, and colleagues about the condition to foster understanding and provide necessary support. Simple accommodations, such as using high-contrast text and avoiding color-coding, can make a big difference.</p>
-        <p>4. Seek Professional Guidance: People with achromatopsia should consult with eye care professionals, such as ophthalmologists and low vision specialists, to receive tailored advice and support.</p>
-        <t>
-            Conclusion
-        </t>
-        <p>Black and white color blindness is a unique condition that significantly affects how individuals perceive and interact with the world. Understanding the challenges and experiences of those with achromatopsia is essential to provide them with the support and accommodations they need to lead fulfilling lives. With the right strategies and awareness, people with black and white color blindness can overcome many of the challenges associated with their condition and thrive in a world that often relies on color for communication and information.</p>
+        <p>1. Wearing appropriate Eyewear: Using tinted or polarized lenses can often help 
+            individuals to reduce their sensitivity in bright environments as well as can 
+            sometimes help with their vision.</p>
+        <p>2. Assistive Technologies: New specialized apps have been made to help individuals 
+            with color blindness identify different colors and differentiate between colors which 
+            might come off as the same. These apps can help in daily tasks such as reading 
+            color coded text, helping color code outfits and colors of socks, etc.</p>
+        <p>3. Educational Awareness: It is highly important for people with colorblindness to 
+            help educate those around them and gather support in daily situations. Not 
+            speaking of the condition might lead to confusion and misunderstanding between 
+            family and friends and can often help in building an inclusive and accommodating 
+            environment.</p>
+        <p>4. Regular Eye Exams and Profession Help: It can often be helpful to regularly get 
+            eyes checked and monitor the state of the color vision. This can help detect any 
+            changes in the color vision of the individual and also help them find new ways to 
+            manage their conditions.</p>
 
 {% endblock %}
