--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -21,7 +21,7 @@
 
     </head>
     <body>
-        <nav class = "navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class = "navbar navbar-expand-lg navbar-dark bg-dark" id="sticky">
             <button 
                 class=" navbar-toggler" 
                 type="button" 
@@ -94,6 +94,21 @@
       <script
         type = "text/javascript"
         src = "{{ url_for('static', filename = 'index.js')}}">
+        </script>
+
+        <script>
+            window.onscroll = function() {myFunction()};
+
+            var header = document.getElementById("sticky");
+            var sticky = header.offsetTop;
+
+            function myFunction() {
+              if (window.pageYOffset > sticky) {
+                header.classList.add("sticky");
+              } else {
+                header.classList.remove("sticky");
+              }
+            }
         </script>
     </body>
 </html>
