--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -35,7 +35,8 @@
                 <div class="navbar-nav">
                     {% if user.is_authenticated %}
                     <a class="nav-item nav-link" id="home" href="/">Home</a>
-                    <a class="nav-item nav-link" id="colorBlind" href="/colorBlindPage">Color Blind Page</a>
+                    <a class="nav-item nav-link" id="colorBlind" href="/blackandwhite">Black and White</a>
+                    <a class="nav-item nav-link" id="colorBlindTwo" href="/blueandyellow">Blue and Yellow</a>
                     <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>                 
                     {% else %}
                     <a class="nav-item nav-link" id="login" href="/login">Login</a>
