Switch Blue and Yellow colors

--- a/website/templates/blackandwhite.html
+++ b/website/templates/blackandwhite.html
@@ -7,7 +7,7 @@
     <h3 align="center", style="color: #000000d0; font-family: 'Times New Roman', Times, serif; font-size:200%;">(In Black and White)</h3>
 
     <div align = "center", style="font-family: 'Times New Roman', Times, serif;">
-    <label style = "margin-top: 1em; color: rgb(38, 46, 46);", for="buttonPS">Head to the blue and yellow page!</label>
+    <label style = "margin-top: 1em; color: rgb(38, 46, 46);", for="buttonPS">Head to the Blue and Yellow page!</label>
     <br />
     <button align="center" class="bn29", style ="margin-top: .1em;", id="buttonPS", type="button", onclick="window.location.href = '/blueandyellow';">Palette Swapper!</button>
     </div>
