Make home h1 darker in color

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -3,7 +3,7 @@
 {% block content %}
     <br />
     <body style="background-color: #beffca;">
-    <h1 align="center", style="color: #ffa8a8; font-family: 'Times New Roman', Times, serif; font-size:300%;">Colorblindness Informational Guide</h1>
+    <h1 align="center", style="color: #ff6161; font-family: 'Times New Roman', Times, serif; font-size:300%;">Colorblindness Informational Guide</h1>
     <h3 align="center", style="color: #000000d0; font-family: 'Times New Roman', Times, serif; font-size:200%;">(In Color)</h3>
     
     <div align = "center", style="font-family: 'Times New Roman', Times, serif;">
