--- a/website/templates/blueandyellow.html
+++ b/website/templates/blueandyellow.html
@@ -7,7 +7,7 @@
     <h3 align="center", style="color: rgb(10, 41, 216); font-family: 'Times New Roman', Times, serif; font-size:200%;">(In Blue and Yellow)</h3>
     
     <div align = "center", style="font-family: 'Times New Roman', Times, serif;">
-    <label style = "margin-top: 1em; color: rgb(10, 41, 216);", for="buttonPS">Head to the home page!</label>
+    <label style = "margin-top: 1em; color: rgb(10, 41, 216);", for="buttonPS">Head to the Home page!</label>
     <br />
     <button align="center" class="bn29", style ="margin-top: .1em", id="buttonPS", type="button", onclick="window.location.href = '/';">Palette Swapper!</button>
     </div>
