--- a/website/templates/blueandyellow.html
+++ b/website/templates/blueandyellow.html
@@ -26,7 +26,7 @@
             What are the Different Kinds of Colorblindness?
         </t3>
         <p class="by">
-            <strong>Black and white colorblindness (achromatopsia):</strong> 
+            <strong>Black and White Colorblindness (Achromatopsia):</strong> 
             Sees the world in shades of gray and is usually a condition which 
             is congenital and is present from birth. 
             <br />
@@ -44,7 +44,7 @@
             Causes of the Different Types of Colorblindness
         </t3>
         <p class="by">
-            <strong>Black and white colorblindness (achromatopsia):</strong> 
+            <strong>Black and White Colorblindness (Achromatopsia):</strong> 
             This type of colorblindness is usually caused by cone cells in the 
             retina being genetically mutated and since these
             cone cells are responsible for how color is perceived, 
@@ -69,7 +69,7 @@
             Impact on Daily Life
         </t3>
         <p class="by">
-            <strong>Black and white colorblindness:</strong> 
+            <strong>Black and White Colorblindness:</strong> 
             This type of colorblindness can often cause individuals to become 
             extremely sensitive to light and can often lead to painful situations 
             if they are in bright environments. Furthermore, some people might 
@@ -81,7 +81,7 @@
             their boss tells them to bring the “blue” folder, they might have a 
             hard time performing the simple task. 
             <br />
-            <strong>Green and Red Colorblindnes:</strong> 
+            <strong>Green and Red Colorblindness:</strong> 
             One of the main impacts of green and red 
             colorblindness is driving as it is hard to differentiate between the traffic lights go 
             and stop and can lead to dangerous situations. Furthermore, many professional 
@@ -106,7 +106,7 @@
             speaking of the condition might lead to confusion and misunderstanding between 
             family and friends and can often help in building an inclusive and accommodating 
             environment.</p>
-        <p class="by">4. Regular Eye Exams and Profession Help: It can often be helpful to regularly get 
+        <p class="by">4. Regular Eye Exams and Professional Help: It can often be helpful to regularly get 
             eyes checked and monitor the state of the color vision. This can help detect any 
             changes in the color vision of the individual and also help them find new ways to 
             manage their conditions.</p>
