--- a/website/templates/blueandyellow.html
+++ b/website/templates/blueandyellow.html
@@ -2,18 +2,24 @@
 
 {% block content %}
     <br />
+    <!-- styles for the headers and backgorund of blue and yellow page -->
     <body style="background-color: rgb(255, 255, 102);">
     <h1 align="center", style="color: rgb(10, 41, 216); font-family: 'Times New Roman', Times, serif; font-size:300%;">Colorblindness Informational Guide</h1>
     <h3 align="center", style="color: rgb(10, 41, 216); font-family: 'Times New Roman', Times, serif; font-size:200%;">(In Blue and Yellow)</h3>
     
+     <!-- labels for the palette swapper button -->
     <div align = "center", style="font-family: 'Times New Roman', Times, serif;">
     <label style = "margin-top: 1em; color: rgb(10, 41, 216);", for="buttonPS">Head to the Home page!</label>
+
+    <!-- import button class and styles from style.css page -->
     <br />
     <button align="center" class="bn29", style ="margin-top: .1em", id="buttonPS", type="button", onclick="window.location.href = '/';">Palette Swapper!</button>
     </div>
 
+    <!-- import stylesheed style.css -->
     <link rel="stylesheet" href="/static/style.css">
 
+        <!-- information guide on colorblindness -->
         <br />
         <t3>
             Understanding the Different Types of Colorblindness
