--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -5,6 +5,7 @@
         <meta charset = "utf-8" />
         <meta name = "viewport" content="width=device-width, initial-scale=1" />
 
+        <!-- import stylesheeds from bootstrap.com -->
         <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -17,12 +18,15 @@
       crossorigin="anonymous"
     />
 
+    <!-- original base title is home -->
     <title>{% block title %}Home{% endblock %}</title>
 
+    <!-- creating navbar expanding sticky top-->
     </head>
     <body>
-        <nav class = "navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-            <button 
+        <nav class = "navbar navbar-expand-lg navbar-dark bg-dark sticky-top"> <!-- sticky bar on top-->
+            <!-- button for collapsing navbar -->
+            <button  
                 class=" navbar-toggler" 
                 type="button" 
                 data-toggle="collapse" 
@@ -31,19 +35,20 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
+            <!-- collapsing navbar setting up our pages -->
             <div class="collapse navbar-collapse" id="navbar">
                 <div class="navbar-nav">
-                    {% if user.is_authenticated %}
+                    {% if user.is_authenticated %} <!-- only show if user is logged in -->
                     <a class="nav-item nav-link" id="home" href="/">Home</a>
                     <a class="nav-item nav-link" id="colorBlind" href="/blackandwhite">Black and White</a>
                     <a class="nav-item nav-link" id="colorBlindTwo" href="/blueandyellow">Blue and Yellow</a>
                     <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>                 
-                    {% else %}
+                    {% else %} <!-- only show if not logged in -->
                     <a class="nav-item nav-link" id="login" href="/login">Login</a>
                     <a class="nav-item nav-link" id="sign-up" href="/sign-up">Sign-Up</a>
                     {% endif %}
                 </div>
-                {% if user.is_authenticated %}
+                {% if user.is_authenticated %} <!-- if user is logged in show name at top-->
                 <div class="navbar-nav ml-auto">
                 <span class="navbar-text">{{ user.firstName }} {{ user.lastName }}</span>
                 {% endif %}
@@ -51,6 +56,7 @@
             </div>
         </nav>
 
+        <!-- flash error messages -->
         {% with messages = get_flashed_messages(with_categories=true) %}
           {% if messages %}
             {% for category, message in messages%}
@@ -62,6 +68,7 @@
                 </button>
               </div>
               {% else %}
+              <!-- flash success messages-->
               <div class="alert alert-success alter-dismissable fade show" role="alert">
                 {{message}}
                 <button type="button" class="close" data-dismiss="alert">
