--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -2,18 +2,23 @@
 
 {% block content %}
     <br />
+     <!-- styles for the headers and backgorund of home page -->
     <body style="background-color: #beffca;">
     <h1 align="center", style="color: #ff6161; font-family: 'Times New Roman', Times, serif; font-size:300%;">Colorblindness Informational Guide</h1>
     <h3 align="center", style="color: #000000d0; font-family: 'Times New Roman', Times, serif; font-size:200%;">(In Color)</h3>
     
+     <!-- labels for the palette swapper button -->
     <div align = "center", style="font-family: 'Times New Roman', Times, serif;">
     <label style = "margin-top: 1em; color: rgb(38, 46, 46);", for="buttonPS">If you are color blind, click this button for easier reading!</label>
+    
+     <!-- import button class and styles from style.css page -->
     <br />
     <button align="center" class="bn29", style ="margin-top: .1em", id="buttonPS", type="button", onclick="window.location.href = '/blackandwhite';">Palette Swapper!</button>
     </div>
-
+     <!-- import stylesheed style.css -->
     <link rel="stylesheet" href="/static/style.css">
 
+         <!-- information guide on colorblindness -->
         <br />
         <t>
             Understanding the Different Types of Colorblindness
