--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <br />
-     <!-- styles for the headers and backgorund of home page -->
+     <!-- styles for the headers and background of home page -->
     <body style="background-color: #beffca;">
     <h1 align="center", style="color: #ff6161; font-family: 'Times New Roman', Times, serif; font-size:300%;">Colorblindness Informational Guide</h1>
     <h3 align="center", style="color: #000000d0; font-family: 'Times New Roman', Times, serif; font-size:200%;">(In Color)</h3>
@@ -15,7 +15,7 @@
     <br />
     <button align="center" class="bn29", style ="margin-top: .1em", id="buttonPS", type="button", onclick="window.location.href = '/blackandwhite';">Palette Swapper!</button>
     </div>
-     <!-- import stylesheed style.css -->
+     <!-- import stylesheet style.css -->
     <link rel="stylesheet" href="/static/style.css">
 
          <!-- information guide on colorblindness -->
