--- a/website/templates/sign-up.html
+++ b/website/templates/sign-up.html
@@ -25,7 +25,7 @@
             <label for="password1">Password</label>
             <input type="password" class="form-control" id="password1" name="password1" placeholder="Enter password"/>
         </div>
-        <div class="form-group"> <!-- creating box and label for passwor2 input, sending data to backend-->
+        <div class="form-group"> <!-- creating box and label for password2 input, sending data to backend-->
             <label for="password2">Password (Confirm)</label>
             <input type="password" class="form-control" id="password2" name="password2" placeholder="Re-enter password"/>
         </div>
