--- a/website/templates/blueandyellow.html
+++ b/website/templates/blueandyellow.html
@@ -4,16 +4,24 @@
     <br />
     <!-- styles for the headers and background of blue and yellow page -->
     <body style="background-color: rgb(255, 255, 102);">
-    <h1 align="center", style="color: rgb(10, 41, 216); font-family: 'Times New Roman', Times, serif; font-size:300%;">Colorblindness Informational Guide</h1>
-    <h3 align="center", style="color: rgb(10, 41, 216); font-family: 'Times New Roman', Times, serif; font-size:200%;">(In Blue and Yellow)</h3>
+    <center>    
+    <h1 style="color: rgb(10, 41, 216); font-family: 'Times New Roman', Times, serif; font-size:300%;">Colorblindness Informational Guide</h1>
+    </center>
+    <center>
+    <h3 style="color: rgb(10, 41, 216); font-family: 'Times New Roman', Times, serif; font-size:200%;">(In Blue and Yellow)</h3>
+    </center>  
     
      <!-- labels for the palette swapper button -->
-    <div align = "center", style="font-family: 'Times New Roman', Times, serif;">
+    <div style="font-family: 'Times New Roman', Times, serif;">
+    <center> 
     <label style = "margin-top: 1em; color: rgb(10, 41, 216);", for="buttonPS">Head to the Home page!</label>
+    </center> 
 
     <!-- import button class and styles from style.css page -->
     <br />
-    <button align="center" class="bn29", style ="margin-top: .1em", id="buttonPS", type="button", onclick="window.location.href = '/';">Palette Swapper!</button>
+    <center>
+    <button class="bn29", style ="margin-top: .1em", id="buttonPS", type="button", onclick="window.location.href = '/';">Palette Swapper!</button>
+    </center>   
     </div>
 
     <!-- import stylesheet style.css -->
@@ -21,16 +29,16 @@
 
         <!-- information guide on colorblindness -->
         <br />
-        <t3>
+        <div class="t3">
             Understanding the Different Types of Colorblindness
-        </t3>
+        </div>
         <p class="by" >Colorblindness is a condition in which individuals perceive color differently than the 
             majority of the world, often lacking the ability to see certain colors, or even all 
             colors around them. It is a very unique and rare condition and can impact people’s 
             daily lives</p>
-        <t3>
+        <div class="t3">
             What are the Different Kinds of Colorblindness?
-        </t3>
+        </div>
         <p class="by">
             <strong>Black and White Colorblindness (Achromatopsia):</strong> 
             Sees the world in shades of gray and is usually a condition which 
@@ -46,9 +54,9 @@
             to differentiate between red and green colors as they are seen 
             as the same color.
         </p>
-        <t3>
+        <p class="t3">
             Causes of the Different Types of Colorblindness
-        </t3>
+        </p>
         <p class="by">
             <strong>Black and White Colorblindness (Achromatopsia):</strong> 
             This type of colorblindness is usually caused by cone cells in the 
@@ -71,9 +79,9 @@
             colorblindness since they only carry one X chromosome. Women are able 
             to compensate for the mutation of one of their X chromosomes with the other.
         </p>
-        <t3>
+        <div class="t3">
             Impact on Daily Life
-        </t3>
+        </div>>
         <p class="by">
             <strong>Black and White Colorblindness:</strong> 
             This type of colorblindness can often cause individuals to become 
@@ -97,9 +105,9 @@
             society uses red and green a lot for indicators, whether it be in sports, work 
             situations, games, etc. life overall is made a bit more difficult and stressful.
         </p>
-        <t3>
+        <div class="t3">
             Coping Strategies and Support
-        </t3>
+        </div>
         <p class="by">1. Wearing appropriate Eyewear: Using tinted or polarized lenses can often help 
             individuals to reduce their sensitivity in bright environments as well as can 
             sometimes help with their vision.</p>
