--- a/website/templates/sign-up.html
+++ b/website/templates/sign-up.html
@@ -8,6 +8,7 @@
 
      <!-- all boxes and labels created for signup page -->
     <form method="POST">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
         <h3 align="center" style="color:rgb(205, 77, 98)">Sign Up</h3>
         <div class="form-group">  <!-- creating box and label for email input, sending data to backend-->
             <label for="email">Email Address</label> 
