--- a/website/templates/blackandwhite.html
+++ b/website/templates/blackandwhite.html
@@ -4,24 +4,15 @@
     <br />
     <!-- styles for the headers and background of black and white page -->
     <body style="background-color: #f0f0f0;">
-    <center>
-    <h1 style="color: #000000d0; font-family: 'Times New Roman', Times, serif; font-size:300%;">Colorblindness Informational Guide</h1>
-    </center>
-    <center>
-    <h3 style="color: #000000d0; font-family: 'Times New Roman', Times, serif; font-size:200%;">(In Black and White)</h3>
-    </center>
+    <h1 align="center", style="color: #000000d0; font-family: 'Times New Roman', Times, serif; font-size:300%;">Colorblindness Informational Guide</h1>
+    <h3 align="center", style="color: #000000d0; font-family: 'Times New Roman', Times, serif; font-size:200%;">(In Black and White)</h3>
 
      <!-- labels for the palette swapper button -->
-    <div style="font-family: 'Times New Roman', Times, serif;">
-    <center> 
+    <div align = "center", style="font-family: 'Times New Roman', Times, serif;">
     <label style = "margin-top: 1em; color: rgb(38, 46, 46);", for="buttonPS">Head to the Blue and Yellow page!</label>
-    </center> 
-
     <br />
     <!-- import button class and styles from style.css page -->
-    <center>
-    <button class="bn29", style ="margin-top: .1em;", id="buttonPS", type="button", onclick="window.location.href = '/blueandyellow';">Palette Swapper!</button>
-    </center>
+    <button align="center" class="bn29", style ="margin-top: .1em;", id="buttonPS", type="button", onclick="window.location.href = '/blueandyellow';">Palette Swapper!</button>
     </div>
 
     <!-- import stylesheet style.css -->
@@ -29,16 +20,16 @@
 
         <!-- information guide on colorblindness -->
         <br />
-        <div class="t2">
+        <t2>
             Understanding the Different Types of Colorblindness
-        </div>
+        </t2>
         <p class="q" >Colorblindness is a condition in which individuals perceive color differently than the 
             majority of the world, often lacking the ability to see certain colors, or even all 
             colors around them. It is a very unique and rare condition and can impact people’s 
             daily lives</p>
-        <div class="t2">
+        <t2>
             What are the Different Kinds of Colorblindness?
-        </div>
+        </t2>
         <p class="q">
             <strong>Black and White Colorblindness (Achromatopsia):</strong> 
             Sees the world in shades of gray and is usually a condition which 
@@ -54,9 +45,9 @@
             to differentiate between red and green colors as they are seen 
             as the same color.
         </p>
-        <div class="t2">
+        <t2>
             Causes of the Different Types of Colorblindness
-        </div>
+        </t2>
         <p class="q">
             <strong>Black and White Colorblindness (Achromatopsia):</strong> 
             This type of colorblindness is usually caused by cone cells in the 
@@ -79,9 +70,9 @@
             colorblindness since they only carry one X chromosome. Women are able 
             to compensate for the mutation of one of their X chromosomes with the other.
         </p>
-        <div class="t2">
+        <t2>
             Impact on Daily Life
-        </div>
+        </t2>
         <p class="q">
             <strong>Black and White Colorblindness:</strong> 
             This type of colorblindness can often cause individuals to become 
@@ -105,9 +96,9 @@
             society uses red and green a lot for indicators, whether it be in sports, work 
             situations, games, etc. life overall is made a bit more difficult and stressful.
         </p>
-        <div class="t2">
+        <t2>
             Coping Strategies and Support
-        </div>
+        </t2>
         <p class="q">1. Wearing appropriate Eyewear: Using tinted or polarized lenses can often help 
             individuals to reduce their sensitivity in bright environments as well as can 
             sometimes help with their vision.</p>
