--- a/website/templates/blueandyellow.html
+++ b/website/templates/blueandyellow.html
@@ -4,24 +4,16 @@
     <br />
     <!-- styles for the headers and background of blue and yellow page -->
     <body style="background-color: rgb(255, 255, 102);">
-    <center>    
-    <h1 style="color: rgb(10, 41, 216); font-family: 'Times New Roman', Times, serif; font-size:300%;">Colorblindness Informational Guide</h1>
-    </center>
-    <center>
-    <h3 style="color: rgb(10, 41, 216); font-family: 'Times New Roman', Times, serif; font-size:200%;">(In Blue and Yellow)</h3>
-    </center>  
+    <h1 align="center", style="color: rgb(10, 41, 216); font-family: 'Times New Roman', Times, serif; font-size:300%;">Colorblindness Informational Guide</h1>
+    <h3 align="center", style="color: rgb(10, 41, 216); font-family: 'Times New Roman', Times, serif; font-size:200%;">(In Blue and Yellow)</h3>
     
      <!-- labels for the palette swapper button -->
-    <div style="font-family: 'Times New Roman', Times, serif;">
-    <center> 
+    <div align = "center", style="font-family: 'Times New Roman', Times, serif;">
     <label style = "margin-top: 1em; color: rgb(10, 41, 216);", for="buttonPS">Head to the Home page!</label>
-    </center> 
 
     <!-- import button class and styles from style.css page -->
     <br />
-    <center>
-    <button class="bn29", style ="margin-top: .1em", id="buttonPS", type="button", onclick="window.location.href = '/';">Palette Swapper!</button>
-    </center>   
+    <button align="center" class="bn29", style ="margin-top: .1em", id="buttonPS", type="button", onclick="window.location.href = '/';">Palette Swapper!</button>
     </div>
 
     <!-- import stylesheet style.css -->
@@ -29,16 +21,16 @@
 
         <!-- information guide on colorblindness -->
         <br />
-        <div class="t3">
+        <t3>
             Understanding the Different Types of Colorblindness
-        </div>
+        </t3>
         <p class="by" >Colorblindness is a condition in which individuals perceive color differently than the 
             majority of the world, often lacking the ability to see certain colors, or even all 
             colors around them. It is a very unique and rare condition and can impact people’s 
             daily lives</p>
-        <div class="t3">
+        <t3>
             What are the Different Kinds of Colorblindness?
-        </div>
+        </t3>
         <p class="by">
             <strong>Black and White Colorblindness (Achromatopsia):</strong> 
             Sees the world in shades of gray and is usually a condition which 
@@ -54,9 +46,9 @@
             to differentiate between red and green colors as they are seen 
             as the same color.
         </p>
-        <p class="t3">
+        <t3>
             Causes of the Different Types of Colorblindness
-        </p>
+        </t3>
         <p class="by">
             <strong>Black and White Colorblindness (Achromatopsia):</strong> 
             This type of colorblindness is usually caused by cone cells in the 
@@ -79,9 +71,9 @@
             colorblindness since they only carry one X chromosome. Women are able 
             to compensate for the mutation of one of their X chromosomes with the other.
         </p>
-        <div class="t3">
+        <t3>
             Impact on Daily Life
-        </div>>
+        </t3>
         <p class="by">
             <strong>Black and White Colorblindness:</strong> 
             This type of colorblindness can often cause individuals to become 
@@ -105,9 +97,9 @@
             society uses red and green a lot for indicators, whether it be in sports, work 
             situations, games, etc. life overall is made a bit more difficult and stressful.
         </p>
-        <div class="t3">
+        <t3>
             Coping Strategies and Support
-        </div>
+        </t3>
         <p class="by">1. Wearing appropriate Eyewear: Using tinted or polarized lenses can often help 
             individuals to reduce their sensitivity in bright environments as well as can 
             sometimes help with their vision.</p>
