--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -4,40 +4,32 @@
     <br />
      <!-- styles for the headers and background of home page -->
     <body style="background-color: #beffca;">
-    <center> 
-    <h1 style="color: #ff6161; font-family: 'Times New Roman', Times, serif; font-size:300%;">Colorblindness Informational Guide</h1>
-    </center> 
-    <center> 
-    <h3 style="color: #000000d0; font-family: 'Times New Roman', Times, serif; font-size:200%;">(In Color)</h3>
-    </center> 
+    <h1 align="center", style="color: #ff6161; font-family: 'Times New Roman', Times, serif; font-size:300%;">Colorblindness Informational Guide</h1>
+    <h3 align="center", style="color: #000000d0; font-family: 'Times New Roman', Times, serif; font-size:200%;">(In Color)</h3>
     
      <!-- labels for the palette swapper button -->
-    <div style="font-family: 'Times New Roman', Times, serif;"> 
-    <center> 
+    <div align = "center", style="font-family: 'Times New Roman', Times, serif;">
     <label style = "margin-top: 1em; color: rgb(38, 46, 46);", for="buttonPS">If you are color blind, click this button for easier reading!</label>
-    </center> 
     
      <!-- import button class and styles from style.css page -->
     <br />
-    <center>
-    <button class="bn29", style ="margin-top: .1em", id="buttonPS", type="button", onclick="window.location.href = '/blackandwhite';">Palette Swapper!</button>
-    </center> 
+    <button align="center" class="bn29", style ="margin-top: .1em", id="buttonPS", type="button", onclick="window.location.href = '/blackandwhite';">Palette Swapper!</button>
     </div>
      <!-- import stylesheet style.css -->
     <link rel="stylesheet" href="/static/style.css">
 
          <!-- information guide on colorblindness -->
         <br />
-        <div class="t">
+        <t>
             Understanding the Different Types of Colorblindness
-        </div>
+        </t>
         <p>Colorblindness is a condition in which individuals perceive color differently than the 
             majority of the world, often lacking the ability to see certain colors, or even all 
             colors around them. It is a very unique and rare condition and can impact people’s 
             daily lives</p>
-        <div class="t">
+        <t>
             What are the Different Kinds of Colorblindness?
-        </div>
+        </t>
         <p>
             <strong>Black and White Colorblindness (Achromatopsia):</strong> 
             Sees the world in shades of gray and is usually a condition which 
@@ -53,9 +45,9 @@
             to differentiate between red and green colors as they are seen 
             as the same color.
         </p>
-        <div class="t">
+        <t>
             Causes of the Different Types of Colorblindness
-        </div>
+        </t>
         <p>
             <strong>Black and White Colorblindness (Achromatopsia):</strong> 
             This type of colorblindness is usually caused by cone cells in the 
@@ -78,9 +70,9 @@
             colorblindness since they only carry one X chromosome. Women are able 
             to compensate for the mutation of one of their X chromosomes with the other.
         </p>
-        <div class="t">
+        <t>
             Impact on Daily Life
-        </div>
+        </t>
         <p>
             <strong>Black and White Colorblindness:</strong> 
             This type of colorblindness can often cause individuals to become 
@@ -104,9 +96,9 @@
             society uses red and green a lot for indicators, whether it be in sports, work 
             situations, games, etc. life overall is made a bit more difficult and stressful.
         </p>
-        <div class="t">
+        <t>
             Coping Strategies and Support
-        </div>
+        </t>
         <p>1. Wearing appropriate Eyewear: Using tinted or polarized lenses can often help 
             individuals to reduce their sensitivity in bright environments as well as can 
             sometimes help with their vision.</p>
