Add proper CSS centering

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -4,24 +4,24 @@
     <br />
      <!-- styles for the headers and background of home page -->
     <body style="background-color: #beffca;">
-    <center> 
+    <div class="centered">
     <h1 style="color: #ff6161; font-family: 'Times New Roman', Times, serif; font-size:300%;">Colorblindness Informational Guide</h1>
-    </center> 
-    <center> 
+    </div> 
+    <div class="centered">
     <h3 style="color: #000000d0; font-family: 'Times New Roman', Times, serif; font-size:200%;">(In Color)</h3>
-    </center> 
+    </div> 
     
      <!-- labels for the palette swapper button -->
     <div style="font-family: 'Times New Roman', Times, serif;"> 
-    <center> 
+    <div class="centered">
     <label style = "margin-top: 1em; color: rgb(38, 46, 46);", for="buttonPS">If you are color blind, click this button for easier reading!</label>
-    </center> 
+    </div>
     
      <!-- import button class and styles from style.css page -->
     <br />
-    <center>
+    <div class="centered">
     <button class="bn29", style ="margin-top: .1em", id="buttonPS", type="button", onclick="window.location.href = '/blackandwhite';">Palette Swapper!</button>
-    </center> 
+    </div>
     </div>
      <!-- import stylesheet style.css -->
     <link rel="stylesheet" href="/static/style.css">
