--- a/website/templates/blackandwhite.html
+++ b/website/templates/blackandwhite.html
@@ -4,24 +4,24 @@
     <br />
     <!-- styles for the headers and background of black and white page -->
     <body style="background-color: #f0f0f0;">
-    <center>
+    <div class="centered">
     <h1 style="color: #000000d0; font-family: 'Times New Roman', Times, serif; font-size:300%;">Colorblindness Informational Guide</h1>
-    </center>
-    <center>
+    </div>
+    <div class="centered">
     <h3 style="color: #000000d0; font-family: 'Times New Roman', Times, serif; font-size:200%;">(In Black and White)</h3>
-    </center>
+</div>
 
      <!-- labels for the palette swapper button -->
     <div style="font-family: 'Times New Roman', Times, serif;">
-    <center> 
+    <div class="centered"> 
     <label style = "margin-top: 1em; color: rgb(38, 46, 46);", for="buttonPS">Head to the Blue and Yellow page!</label>
-    </center> 
+    </div> 
 
     <br />
     <!-- import button class and styles from style.css page -->
-    <center>
+    <div class="centered">
     <button class="bn29", style ="margin-top: .1em;", id="buttonPS", type="button", onclick="window.location.href = '/blueandyellow';">Palette Swapper!</button>
-    </center>
+    </div> 
     </div>
 
     <!-- import stylesheet style.css -->
