--- a/website/templates/blueandyellow.html
+++ b/website/templates/blueandyellow.html
@@ -4,24 +4,24 @@
     <br />
     <!-- styles for the headers and background of blue and yellow page -->
     <body style="background-color: rgb(255, 255, 102);">
-    <center>    
+    <div class="centered">  
     <h1 style="color: rgb(10, 41, 216); font-family: 'Times New Roman', Times, serif; font-size:300%;">Colorblindness Informational Guide</h1>
-    </center>
-    <center>
+    </div>
+    <div class="centered">
     <h3 style="color: rgb(10, 41, 216); font-family: 'Times New Roman', Times, serif; font-size:200%;">(In Blue and Yellow)</h3>
-    </center>  
+    </div>  
     
      <!-- labels for the palette swapper button -->
     <div style="font-family: 'Times New Roman', Times, serif;">
-    <center> 
+    <div class="centered">
     <label style = "margin-top: 1em; color: rgb(10, 41, 216);", for="buttonPS">Head to the Home page!</label>
-    </center> 
+    </div>  
 
     <!-- import button class and styles from style.css page -->
     <br />
-    <center>
+    <div class="centered">
     <button class="bn29", style ="margin-top: .1em", id="buttonPS", type="button", onclick="window.location.href = '/';">Palette Swapper!</button>
-    </center>   
+    </div>   
     </div>
 
     <!-- import stylesheet style.css -->
